--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <h1>This season's guest speakers</h1>
         <h3>October <br> David Brancaccio</h3>
-        <img src="images/brancaccio.jpg" alt="David Brancaccio" height="75">
+        <img src="images/brancaccio75.jpg" alt="David Brancaccio" height="75">
         <p><a href="Brancaccio.html">This page is under construction</a></p>
     </main>
 
