--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </main>
 
     <footer>
-        &copy; Suman Kanda. eg Copyright Arthur Hendela, 2024
+        &copy; Suman Kanda 2024
     </footer>
 </body>
 </html>
